--- a/starter-code/new.html
+++ b/starter-code/new.html
@@ -41,6 +41,13 @@
            4. Author's URL
            5. Article category
            6. Some way to know if this article is a draft or is published -->
+
+        <form action="#" id="new-form">
+          <label>
+            <input type="text" id="article-author" placeholder="Author Name" required>
+          </label>
+
+        </form>
       </section>
 
       <section id="articles" class="tab-content">
@@ -49,6 +56,11 @@
 
       <section id="article-export">
         <!-- TODO: Refer to the preview image to see what we will be building here: we need a container of some kind to hold a JSON export of our article. Ideally this container would show only a incipit (short preview) of the JSON and also be clickable to allow easy selection of the text it holds. What kind of element could we use for this? -->
+
+        <label id="export-field" for="article-json" class="pull-right">
+          <input type="text" readonly id="article-json">
+          When finalized, copy the above JSON, and paste into blogArticles.js
+        </label>
       </section>
 
     </main>
